--- a/praca_dyplomowa/praca_dyplomowa.tex
+++ b/praca_dyplomowa/praca_dyplomowa.tex
@@ -1189,7 +1189,7 @@ Z wykonanych analiz dokładności klasyfikatora KNN w zależności od parametru 
 \bibitem{Jankowski}{Jankowski Michał, ,,Elementy Grafiki Komputerowej'', 2006}
 \bibitem{rgbhsv}{RGB to HSV color conversion, https://www.rapidtables.com/convert/\\color/rgb-to-hsv.html, dostęp: styczeń 2019}
 \bibitem{Malina2}{Witold Malina, Maciej Smiatacz, ,,Rozpoznawanie obrazów'', 2010}
-\bibitem{knn2}{Metoda K Najbliższych Sąsiadów, http://home.agh.edu.pl/~horzyk/lectures/miw/KNN.pdf, dostęp: styczeń 2019}
+\bibitem{knn2}{Metoda K Najbliższych Sąsiadów, http://home.agh.edu.pl/\%7ehorzyk/\\lectures/miw/KNN.pdf, dostęp: styczeń 2019}
 \bibitem{Osowski}{Osowski Stanisław, ,,Metody i narzędzia eksploracji danych'', 2013}
 \bibitem{opencv}{Introduction to OpenCV-Python Tutorials, https://docs.opencv.org/\\3.4.1/d0/de3/tutorial\_py\_intro.html, dostęp: styczeń 2019}
 \bibitem{opencv2}{OpenCV, https://en.wikipedia.org/wiki/OpenCV, dostęp: styczeń 2019}
@@ -1203,11 +1203,11 @@ Z wykonanych analiz dokładności klasyfikatora KNN w zależności od parametru 
 
 
 
-\bibitem{opencvc}{OpenCV docs, https://docs.opencv.org/3.4/d1/d32/tutorial\_py\_contour\_properties.html, dostęp: styczeń 2019}
-\bibitem{convex}{Learningopencv, https://www.learnopencv.com/convex-hull-using-opencv-in-python-and-c/, dostęp: styczeń 2019}
-\bibitem{pyimagesearch}{Pyimagesearch, https://www.pyimagesearch.com/2016/03/28/measuring-size-of-objects-in-an-image-with-opencv/, dostęp: styczeń 2019}
-\bibitem{opencvm}{OpenCV docs, https://docs.opencv.org/3.0-beta/doc/py\_tutorials/py\_imgproc/\\py\_morphological\_ops/py\_morphological\_ops.html, dostęp: styczeń 2019}
-\bibitem{opencvco}{OpenCV docs, https://docs.opencv.org/3.4.2/df/d9d/tutorial\_py\_colorspaces.html, dostęp: styczeń 2019}
+\bibitem{opencvc}{Contour Properties, https://docs.opencv.org/3.4/d1/d32/tutorial\\\_py\_contour\_properties.html, dostęp: styczeń 2019}
+\bibitem{convex}{Convex Hull using OpenCV in Python and C++,\\ https://www.learnopencv.com/convex-hull-using-opencv-in-python-\\and-c/, dostęp: styczeń 2019}
+\bibitem{pyimagesearch}{Measuring size of objects in an image with OpenCV,\\ https://www.pyimagesearch.com/2016/03/28/measuring-size-of-\\objects-in-an-image-with-opencv/, dostęp: styczeń 2019}
+\bibitem{opencvm}{Morphological Transformations, https://docs.opencv.org/3.0-beta/\\doc/py\_tutorials/py\_imgproc/py\_morphological\_ops/\\py\_morphological\_ops.html, dostęp: styczeń 2019}
+\bibitem{opencvco}{Changing Colorspaces, https://docs.opencv.org/3.4.2/df/d9d/\\tutorial\_py\_colorspaces.html, dostęp: styczeń 2019}
 
 
 \end{thebibliography}
